<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TimeCardRegistrationInstructions"
        android:textSize="@dimen/bootstrap_h2_text_size" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_timecard_staff_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StaffName"
                android:textSize="@dimen/bootstrap_h3_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/timecard_staff_name"
                app:roundedCorners="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_timecard_hkid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HKID"
                android:textSize="@dimen/bootstrap_h3_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/timecard_hkid"
                app:roundedCorners="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_timecard_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MobilePhone"
                android:textSize="@dimen/bootstrap_h3_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/timecard_mobile_phone"
                app:roundedCorners="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_timecard_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeCardNumber"
                android:textSize="@dimen/bootstrap_h3_text_size" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/timecard_number"
                app:roundedCorners="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/timecardSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:bootstrapText="Register"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/timeCardClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:bootstrapBrand="danger"
            app:bootstrapSize="lg"
            app:bootstrapText="Clear"
            app:roundedCorners="true" />
    </LinearLayout>
</LinearLayout>