<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/bootstrap_h4_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/filterEditText"
            android:paddingEnd="4dp"
            android:text="@string/bluetooth_filter" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/filterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            app:roundedCorners="true" />
    </LinearLayout>

    <com.evrencoskun.tableview.TableView
        android:id="@+id/testTableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_panel"
        android:layout_below="@id/bluetooth_heading"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/receptors_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bluetooth_address"
                        android:textStyle="bold" />

                </TableRow>

                <!--<TableRow-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1">-->

                <!--<RadioButton-->
                <!--android:id="@+id/radioButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="abc" />-->

                <!--<TextView-->
                <!--android:id="@+id/textView8"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="TextView" />-->

                <!--<TextView-->
                <!--android:id="@+id/textView15"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="TextView" />-->
                <!--</TableRow>-->

                <!--<TableRow-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1">-->

                <!--<RadioButton-->
                <!--android:id="@+id/radioButton1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="def" />-->

                <!--<TextView-->
                <!--android:id="@+id/textView10"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="TextView" />-->

                <!--<TextView-->
                <!--android:id="@+id/textView16"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="TextView" />-->
                <!--</TableRow>-->

            </TableLayout>
        </RadioGroup>
    </ScrollView>
</LinearLayout>